refactor: 🔨 Simplify tests with DTO updates and remove redundancy
- Refactored `TransactionServiceTest`, `UserServiceTest`, and respective controller tests for improved balance handling and validation logic.
- Removed redundant `id`, `senderId`, and `receiverId` checks from `TransactionDTO` and tests.
- Consolidated methods for `addConnection`, `removeConnection`, and transaction retrieval in services.
- Introduced `TransactionCreationDTO` usage in tests for cleaner transaction creation.
- Enhanced balance validation tests to handle insufficient balance cases.