@@ -1,5 +1,6 @@
 package dev.nikkune.paymybuddy.service;
 
+import dev.nikkune.paymybuddy.dto.TransactionCreationDTO;
 import dev.nikkune.paymybuddy.model.Transaction;
 import dev.nikkune.paymybuddy.model.User;
 import dev.nikkune.paymybuddy.repository.TransactionRepository;
@@ -44,6 +45,7 @@ class TransactionServiceTest {
         sender.setUsername("sender");
         sender.setEmail("sender@example.com");
         sender.setPassword("encodedPassword");
+        sender.setBalance(500.0);
         sender.setConnections(new ArrayList<>());
 
         // Create a receiver user
@@ -52,6 +54,7 @@ class TransactionServiceTest {
         receiver.setUsername("receiver");
         receiver.setEmail("receiver@example.com");
         receiver.setPassword("encodedPassword");
+        receiver.setBalance(500.0);
         receiver.setConnections(new ArrayList<>());
 
         // Create transaction
@@ -75,32 +78,6 @@ class TransactionServiceTest {
         // Assert
         assertEquals(expectedTransactions, actualTransactions);
         verify(transactionRepository).findAll();
-    }
-
-    @Test
-    void exists_WithExistingId_ShouldReturnUser() {
-        // Arrange
-        when(userRepository.findById(sender.getId())).thenReturn(Optional.of(sender));
-
-        // Act
-        User result = transactionService.exists(sender.getId());
-
-        // Assert
-        assertEquals(sender, result);
-        verify(userRepository).findById(sender.getId());
-    }
-
-    @Test
-    void exists_WithNonExistingId_ShouldReturnNull() {
-        // Arrange
-        when(userRepository.findById(999)).thenReturn(Optional.empty());
-
-        // Act
-        User result = transactionService.exists(999);
-
-        // Assert
-        assertNull(result);
-        verify(userRepository).findById(999);
     }
 
     @Test
@@ -153,20 +130,21 @@ class TransactionServiceTest {
         // Arrange
         List<Transaction> sentTransactions = Arrays.asList(transaction);
         List<Transaction> receivedTransactions = new ArrayList<>();
+        List<Transaction> allTransactions = new ArrayList<>();
+        allTransactions.addAll(sentTransactions);
+        allTransactions.addAll(receivedTransactions);
 
         when(userRepository.findById(sender.getId())).thenReturn(Optional.of(sender));
-        when(transactionRepository.findBySenderId(sender.getId())).thenReturn(sentTransactions);
-        when(transactionRepository.findByReceiverId(sender.getId())).thenReturn(receivedTransactions);
+        when(transactionRepository.findBySenderIdOrReceiverId(sender.getId(),sender.getId())).thenReturn(allTransactions);
 
         // Act
         List<Transaction> result = transactionService.getTransactionsByUserId(sender.getId());
 
         // Assert
         assertEquals(1, result.size());
-        assertEquals(transaction, result.get(0));
+        assertEquals(transaction, result.getFirst());
         verify(userRepository).findById(sender.getId());
-        verify(transactionRepository).findBySenderId(sender.getId());
-        verify(transactionRepository).findByReceiverId(sender.getId());
+        verify(transactionRepository).findBySenderIdOrReceiverId(sender.getId(),sender.getId());
     }
 
     @Test
@@ -234,30 +212,49 @@ class TransactionServiceTest {
     @Test
     void addTransaction_WithValidTransaction_ShouldAddTransaction() {
         // Arrange
+        double initialSenderBalance = sender.getBalance();
+        double initialReceiverBalance = receiver.getBalance();
+        double transactionAmount = 75.0;
+
+        TransactionCreationDTO transactionCreationDTO = new TransactionCreationDTO();
+        transactionCreationDTO.setDescription("Test transaction");
+        transactionCreationDTO.setAmount(transactionAmount);
+        transactionCreationDTO.setSenderId(sender.getId());
+        transactionCreationDTO.setReceiverId(receiver.getId());
+
         when(userRepository.findById(sender.getId())).thenReturn(Optional.of(sender));
         when(userRepository.findById(receiver.getId())).thenReturn(Optional.of(receiver));
         when(transactionRepository.save(any(Transaction.class))).thenReturn(transaction);
 
         // Act
-        Transaction result = transactionService.addTransaction(transaction);
+        Transaction result = transactionService.addTransaction(transactionCreationDTO);
 
         // Assert
         assertEquals(transaction, result);
+        assertEquals(initialSenderBalance - transactionAmount, sender.getBalance(), "Sender balance should be decreased by transaction amount");
+        assertEquals(initialReceiverBalance + transactionAmount, receiver.getBalance(), "Receiver balance should be increased by transaction amount");
         verify(userRepository).findById(sender.getId());
         verify(userRepository).findById(receiver.getId());
-        verify(transactionRepository).save(transaction);
+        verify(userRepository).save(sender);
+        verify(userRepository).save(receiver);
+        verify(transactionRepository).save(any(Transaction.class));
     }
 
     @Test
     void addTransaction_WithNonExistingSender_ShouldThrowException() {
         // Arrange
-        when(userRepository.findById(sender.getId())).thenReturn(Optional.empty());
+        TransactionCreationDTO transactionCreationDTO = new TransactionCreationDTO();
+        transactionCreationDTO.setDescription("Test transaction");
+        transactionCreationDTO.setAmount(75.0);
+        transactionCreationDTO.setSenderId(999);
+        transactionCreationDTO.setReceiverId(receiver.getId());
+        when(userRepository.findById(999)).thenReturn(Optional.empty());
 
         // Act & Assert
         RuntimeException exception = assertThrows(RuntimeException.class, 
-            () -> transactionService.addTransaction(transaction));
-        assertEquals("User with ID : " + sender.getId() + " does not exist", exception.getMessage());
-        verify(userRepository).findById(sender.getId());
+            () -> transactionService.addTransaction(transactionCreationDTO));
+        assertEquals("Sender with ID : " + 999 + " does not exist", exception.getMessage());
+        verify(userRepository).findById(999);
         verify(userRepository, never()).findById(receiver.getId());
         verify(transactionRepository, never()).save(any(Transaction.class));
     }
@@ -265,15 +262,47 @@ class TransactionServiceTest {
     @Test
     void addTransaction_WithNonExistingReceiver_ShouldThrowException() {
         // Arrange
+        TransactionCreationDTO transactionCreationDTO = new TransactionCreationDTO();
+        transactionCreationDTO.setDescription("Test transaction");
+        transactionCreationDTO.setAmount(75.0);
+        transactionCreationDTO.setSenderId(sender.getId());
+        transactionCreationDTO.setReceiverId(999);
         when(userRepository.findById(sender.getId())).thenReturn(Optional.of(sender));
-        when(userRepository.findById(receiver.getId())).thenReturn(Optional.empty());
+        when(userRepository.findById(999)).thenReturn(Optional.empty());
 
         // Act & Assert
         RuntimeException exception = assertThrows(RuntimeException.class, 
-            () -> transactionService.addTransaction(transaction));
-        assertEquals("User with ID : " + receiver.getId() + " does not exist", exception.getMessage());
+            () -> transactionService.addTransaction(transactionCreationDTO));
+        assertEquals("Receiver with ID : " + 999 + " does not exist", exception.getMessage());
+        verify(userRepository).findById(sender.getId());
+        verify(userRepository).findById(999);
+        verify(transactionRepository, never()).save(any(Transaction.class));
+    }
+
+    @Test
+    void addTransaction_WithInsufficientBalance_ShouldThrowException() {
+        // Arrange
+        TransactionCreationDTO transactionCreationDTO = new TransactionCreationDTO();
+        transactionCreationDTO.setDescription("Test transaction");
+        transactionCreationDTO.setAmount(1000.0); // Amount greater than sender's balance (500.0)
+        transactionCreationDTO.setSenderId(sender.getId());
+        transactionCreationDTO.setReceiverId(receiver.getId());
+
+        when(userRepository.findById(sender.getId())).thenReturn(Optional.of(sender));
+        when(userRepository.findById(receiver.getId())).thenReturn(Optional.of(receiver));
+
+        // Act & Assert
+        RuntimeException exception = assertThrows(RuntimeException.class, 
+            () -> transactionService.addTransaction(transactionCreationDTO));
+        assertEquals("Insufficient balance", exception.getMessage());
+
+        // Verify that balances remain unchanged
+        assertEquals(500.0, sender.getBalance());
+        assertEquals(500.0, receiver.getBalance());
+
         verify(userRepository).findById(sender.getId());
         verify(userRepository).findById(receiver.getId());
+        verify(userRepository, never()).save(any(User.class));
         verify(transactionRepository, never()).save(any(Transaction.class));
     }
 }
